@@ -21,7 +21,6 @@ HIGH
 - gray out left or right title in graph's expand/collapse bar
 
 MEDIUM
-- ditch PHMeter model element in 'Solutions' and 'Custom', maybe in 'Basics'
 - molecule count for H2O should have a fixed exponent of 25
 - constrain pH and volume so that student computations match displayed values, as in Java sim
 - ditch 'solvent' in model and view, use 'water'
