@@ -14,7 +14,6 @@ define( function( require ) {
   var Dimension2 = require( 'DOT/Dimension2' );
   var Dropper = require( 'PH_SCALE/common/model/Dropper' );
   var Faucet = require( 'PH_SCALE/common/model/Faucet' );
-  var PHMeter = require( 'PH_SCALE/common/model/PHMeter' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
   var Property = require( 'AXON/Property' );
   var Solute = require( 'PH_SCALE/common/model/Solute' );
@@ -49,18 +48,12 @@ define( function( require ) {
       { enabled: thisModel.solution.volumeProperty.get() < thisModel.beaker.volume } );
     thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 70, 632 ), thisModel.beaker.right,
       { enabled: thisModel.solution.volumeProperty.get() > 0 } );
-    thisModel.pHMeter = new PHMeter( new Vector2( 575, 80 ), new Bounds2( 10, 150, 835, 680 ), new Vector2( 605, 405 ), new Bounds2( 30, 150, 966, 680 ) );
 
     // Enable faucets and dropper based on amount of solution in the beaker.
     thisModel.solution.volumeProperty.link( function( volume ) {
       thisModel.solventFaucet.enabledProperty.set( volume < thisModel.beaker.volume );
       thisModel.drainFaucet.enabledProperty.set( volume > 0 );
       thisModel.dropper.enabledProperty.set( !thisModel.dropper.emptyProperty.get() && ( volume < thisModel.beaker.volume ) );
-    } );
-
-    // wire the pH meter directly to the solution
-    thisModel.solution.pHProperty.link( function( pH ) {
-      thisModel.pHMeter.valueProperty.set( pH );
     } );
   }
 
@@ -72,7 +65,6 @@ define( function( require ) {
       this.solution.reset();
       this.solventFaucet.reset();
       this.drainFaucet.reset();
-      this.pHMeter.reset();
     },
 
     /*
