@@ -1,3 +1,4 @@
+11/27/13 don't use PHMeter model element in 'Solutions' and 'Custom' screens
 11/27/13 generalize OnOffSwitch and ChoiceSwitch
 11/27/13 implement the iOS-like switch for the graph options
 11/26/13 add placeholder for 'ratio' feature
